# BigBits

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  TODO.txt  coverage.lcov  lcov.info  package-lock.json
.cargo/: config.toml
benches/: benchmark.rs  cutoffs_bench.rs  utils_bench.rs
coverage_out/html/: index.html
coverage_out/html/coverage/Users/aidansgarlato/Programing/Rust/BigBits/src/bit_nums/: bitint.rs.html  bitint_static.rs.html  traits.rs.html  ubitint.rs.html  ubitint_static.rs.html
coverage_out/html/coverage/Users/aidansgarlato/Programing/Rust/BigBits/src/utils/: div.rs.html  mod.rs.html  mul.rs.html  utils.rs.html
scripts/: coverage.sh  primitive_roots.py
scripts/python/: find_primes.py  primitive_roots.py  pyproject.toml  pyrightconfig.json  smooth_padding.py
src/: bitfloat.rs  bitfloat_static.rs  bitfrac.rs  bitint.rs  bitint_static.rs  lib.rs  main.rs  traits.rs  ubitint.rs  ubitint_static.rs  utils.rs
src/bit_nums/: bitfloat_static.rs  bitfrac.rs  bitint.rs  bitint_static.rs  mod.rs  traits.rs  ubitint.rs  ubitint_static.rs
src/tests/: mod.rs  test_div.rs  test_mul.rs  test_utils.rs
src/utils/: div.rs  mod.rs  mul.rs  utils.rs
